--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 
@@ -13,12 +13,12 @@
 body {
     font-family: Roboto, sans-serif;
     background-color: rgba(68, 177, 68, 0.3);
-    color: black;
+    color: #474545;
 
 }
 
 a {
-    color: black;
+    color: #515050;
 }
 
 a:hover {
@@ -47,7 +47,7 @@ a:hover {
 
 
 #logoimg {
-    border-color: red;
+    /*border-color: red;*/
     width: 50px;
     height: 50px;
 
@@ -92,7 +92,7 @@ a:hover {
 }
 
 .jumbo--box {
-    background-color: rgba(182, 215, 168, .7);
+    background-color: rgba(32, 83, 32, 0.9);
     position: relative;
     left: 25%;
     top: 7em;
@@ -100,6 +100,8 @@ a:hover {
     width: 50%;
     border-radius: 20px;
     margin-bottom: 0;
+    color: #ffffff;
+    /*font-size: 0.1em;*/
 }
 
 #welcome--hdr {
@@ -120,13 +122,23 @@ a:hover {
     top: 30px;
     left: auto;
     /*line-height: 50px;*/
-    line-height: 3em;
+    line-height: 1em;
     text-align: center;
     vertical-align: middle;
     font-size: 120%;
     text-transform: uppercase;
 
 
+}
+
+#content1::after{
+    content: "\a";
+    white-space: pre;
+}
+
+#content2::before{
+    content: "\a";
+    white-space: pre;
 }
 
 /*--Tea selection-------*/
@@ -298,7 +310,7 @@ footer h3, footer ul, footer p {
 @media screen and (max-width: 600px) {
 
     .jumbo--box {
-        background-color: rgba(182, 215, 168, 0.7);
+        background-color: rgba(32, 83, 32, 0.9);
         position: relative;
         left: 15%;
         top: 7em;
@@ -315,7 +327,7 @@ footer h3, footer ul, footer p {
         line-height: 50px;
         text-align: center;
         vertical-align: middle;
-        font-size: 22px;
+        font-size: 26px;
         text-transform: uppercase;
 
     }
@@ -327,7 +339,7 @@ footer h3, footer ul, footer p {
         line-height: 18px;
         text-align: center;
         vertical-align: middle;
-        font-size: 10px;
+        font-size: 12px;
         text-transform: uppercase;
 
 
